[gd_scene load_steps=3 format=3 uid="uid://d0p43t741rpeh"]

[ext_resource type="Script" uid="uid://d05ioxtns0bt" path="res://scenes/arena_difficulty_selection/arena_difficulty_selection.gd" id="1_s2dei"]
[ext_resource type="Texture2D" uid="uid://crgtnk1y6w7w3" path="res://sprites/basic_button_text.png" id="2_37w3f"]

[node name="Control" type="Control" groups=["ArenaDifficultyUi"]]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_s2dei")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="EasyButton" type="Button" parent="VBoxContainer" groups=["EasyButton"]]
layout_mode = 2
text = "Easy"
icon = ExtResource("2_37w3f")

[node name="MediumButton" type="Button" parent="VBoxContainer" groups=["MediumButton"]]
layout_mode = 2
text = "Medium"
icon = ExtResource("2_37w3f")

[node name="HardButton" type="Button" parent="VBoxContainer" groups=["HardButton"]]
layout_mode = 2
text = "Hard"
icon = ExtResource("2_37w3f")
